--- a/js/index.html
+++ b/js/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
 <h2>Calculator</h2>
 
 <input id="num1" type="number" placeholder="First Number">
